# rp2350_geek

./: .gitignore  CMakeLists.txt  README.md  TODO.md  script_usage.md
docs/: hardware.md
examples/baremetal/: CMakeLists.txt  board_config.h
examples/baremetal/src/: main.c
scripts/: build.ps1  build_and_flash.ps1  build_and_flash_zephyr.ps1  build_zephyr.ps1  clean.ps1  config.ps1  flash.ps1  flash_via_serial_bootsel.ps1
zephyr/: CMakeLists.txt  prj.conf
zephyr/boards/: rpi_pico2.overlay
zephyr/src/: font5x7.inc  gif_frames.inc  heart_icon.inc  main.c
